force-app/main/default/objects/Exchange_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Rate</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>