force-app/main/default/objects/Exchange_Rate__c/fields/Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Rate Date</label>
    <type>Date</type>
</CustomField>