force-app/main/default/objects/Exchange_Rate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&quot;https://www.ecb.europa.eu/stats/policy_and_exchange_rates&quot;</defaultValue>
    <label>Source</label>
    <required>true</required>
    <type>Url</type>
</CustomField>